<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDD9D9"
    android:theme="@style/AppTheme.NoActionBar"
    tools:context=".ui.neighbour_list.Details_Activity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/detail_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="0dp"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:background="@null"
                android:padding="4dp"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:id="@+id/detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="4dp"
                android:padding="4dp"
                android:textColor="@android:color/white"
                android:textSize="48sp" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorite_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:src="@drawable/ic_star_black_24dp"
        app:backgroundTint="#FBFBFB"
        app:layout_constraintBottom_toTopOf="@+id/activity_profil_details"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <android.support.v7.widget.CardView
        android:id="@+id/activity_profil_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:minHeight="125dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        tools:layout_editor_absoluteX="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/detail_title_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:textSize="26sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_adress"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_title_1"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:padding="4dp"
                android:src="@drawable/ic_person_pin_circle_black_24dp" />

            <TextView
                android:id="@+id/detail_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/detail_title_1"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/img_adress"
                android:padding="4dp"
                android:text="Paris"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img_tel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_adress"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:padding="4dp"
                android:src="@drawable/ic_stay_current_portrait_black_24dp" />

            <TextView
                android:id="@+id/detail_tel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_adress"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/img_tel"
                android:padding="4dp"
                android:text="+33 6 27 03 56 95"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/img_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_tel"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:padding="4dp"
                android:src="@drawable/ic_mail_outline_black_24dp" />

            <TextView
                android:id="@+id/detail_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/detail_tel"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="10dp"
                android:layout_toEndOf="@+id/img_mail"
                android:padding="4dp"
                android:text="https://myprofil.fr"
                android:textSize="14sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/profil_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:minHeight="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_profil_details">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="4dp"
                android:text="A propos de moi"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:padding="9dp"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec volutpat erat non hendrerit dapibus. Sed semper vel ipsum non vehicula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer dignissim, tortor vel pretium pellentesque, enim ligula suscipit mauris, at scelerisque augue lacus quis nunc. In malesuada."
                android:textSize="16sp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>